--- a/f/fa/fam/familylink.com.html
+++ b/f/fa/fam/familylink.com.html
@@ -1,23 +1,28 @@
-<!--The following is the downloaded HTML source of the familylink.com privacy policy that was archived on 2010-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100616034724id_/http%3A//www.familylink.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the familylink.com privacy policy that was archived on 2010-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100808014603id_/http%3A//www.familylink.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 	<meta name="title" content="FamilyLink.com - Find New Relatives">
 	<meta name="description" content="Finding new relatives on FamilyLink.com is easy! Come find your relatives on FamilyLink.com!">
 	<link rel="image_src" href="http://s.flcdn.net/images/site_thumbnail.png">
 	<title>FamilyLink.com</title>
-	<script type="text/javascript">var Server = {"page":"privacypolicy","server_path":"","server_url":"http:\/\/www.familylink.com","server_url_ssl":"https:\/\/www.familylink.com","server_url_match":"http:\/\/www.familylink.com","site_url":"http:\/\/www.familylink.com","site_url_ssl":"https:\/\/www.familylink.com","site_url_match":"http:\/\/www.familylink.com","full_site_url":"http:\/\/www.familylink.com","ads":true,"static_url":"http:\/\/s.flcdn.net","static_url_ssl":"https:\/\/www.familylink.com\/www","static_url_match":"http:\/\/s.flcdn.net","enable_rapleaf_tracking":true,"enable_lotame":true,"ad_rand":2025337457,"next_page":"","peel_ad":false,"session_id":""};</script>
+	<script type="text/javascript">var Server = {"page":"privacypolicy","server_path":"","server_url":"http:\/\/www.familylink.com","server_url_ssl":"https:\/\/www.familylink.com","server_url_match":"http:\/\/www.familylink.com","site_url":"http:\/\/www.familylink.com","site_url_ssl":"https:\/\/www.familylink.com","site_url_match":"http:\/\/www.familylink.com","full_site_url":"http:\/\/www.familylink.com","ads":true,"static_url":"http:\/\/s.flcdn.net","static_url_ssl":"https:\/\/www.familylink.com\/www","static_url_match":"http:\/\/s.flcdn.net","enable_rapleaf_tracking":true,"enable_lotame":true,"ad_rand":1049058608,"next_page":"","oas_url":"http:\/\/oascentral.familylink.com\/RealMedia\/ads\/","oas_listpos":"Top,Right,Right1,Right2,Right3,Bottom,x01,x02,x03,x04","session_id":"","ad_targeting":"","meebo_staging":false,"meebo_network_name":"familylink"};</script>
 <link rel="shortcut icon" href="http://s.flcdn.net/favicon.ico">
-	<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/jquery-theme/jquery-ui-1.7.1.custom.css?201006141743">
-<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/flcom.interface.common.css?201006141743">
-<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/ads.css?201006141743">
-<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/connect.facebook.com.css?201006141743">
-<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/ancestor_search_results.css?201006141743">
+	<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/jquery-theme/jquery-ui-1.7.1.custom.css?20100806.929f820">
+<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/flcom.interface.common.css?20100806.929f820">
+<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/ads.css?20100806.929f820">
+<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/connect.facebook.com.css?20100806.929f820">
+<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/ancestor_search_results.css?20100806.929f820">
+<link rel="stylesheet" type="text/css" charset="utf-8" href="http://s.flcdn.net/css/jquery.autocomplete.css?20100806.929f820">
 
 	
 </head>
 
-<body><!-- CUSTOM HEADER BEGIN -->
+<!-- If you modify the following body tags, also modify ClickTale.inc.php, line 298 -->
+<!--[if lte IE 6]><body class="ie6"><![endif]-->
+<!--[if IE 7]><body class="ie7"><![endif]-->
+<!--[if gte IE 8]><body class="ie8"><![endif]-->
+<!--[if !IE]>--><body><!--<![endif]--><!-- CUSTOM HEADER BEGIN -->
 
 <div class="header clean_header clearfix"><div class="header_menu clean_header_menu">
      <h1>
@@ -118,16 +123,7 @@ You have the ability to choose those you want to view your family tree. You are 
 			<td class="bottom_right">&nbsp;</td>
 		</tr>
 	</tbody></table>
-</div>
-<script type="text/javascript"> <!--
-    // Define OAS Variables
-    OAS_url = 'http://oascentral.familylink.com/RealMedia/ads/';
-    OAS_sitepage = 'www.familylink.com';
-    OAS_listpos = 'Top';
-    OAS_query = ''; //Search Terms, format (case sensitive) : ‘KeyName1=KeyValue1&KeyName2=KeyValue2
-    OAS_target = '_blank'; // Window parameter for clicks : (_Top or _blank)
-    //--> 
-</script><div class="footer">
+</div><div class="footer">
   <div class="right">FamilyLink.com Property 2010 ©</div>
   <div class="left"> 
     <a href="http://www.familylink.com/privacypolicy">Privacy</a>&nbsp;&nbsp;|&nbsp;&nbsp;
@@ -149,161 +145,69 @@ You have the ability to choose those you want to view your family tree. You are 
 			<textarea id="report_problem_box_text" style="width:98%;height:75px;"></textarea>
 		</div>
 	</div>
-</div><!-- real media mjx ad stuff THIS SHOULD BE THE LAST THING IN THE FILE -->
-<script type="text/javascript"> 
-    // Generate random number for cache busting 
-    OAS_query = '';
-    OAS_rn = new String(Math.random()); 
-    OAS_rns = OAS_rn.substring(2, 11);
-    // Function to find the object in the DOM model 
-    function getObj(name) {
-        if (document.getElementById) this.obj = document.getElementById(name); 
-        else if (document.all) this.obj = document.all[name]; 
-        else if (document.layers) this.obj = document.layers[name];
-
-        if (this.obj) this.style = this.obj.style;
-    }
-    // Add a body load function, not overridding existing ones 
-    function addLoad(func) { 
-        if (window.addEventListener) window.addEventListener('load', func, false); 
-        else if (document.addEventListener) document.addEventListener('load', func, false); 
-        else if (window.attachEvent) window.attachEvent('onload', func); 
-        else if (typeof window.onload != 'function') window.onload = func; 
-        else {
-            var oldonload = window.onload; 
-            window.onload = function() {
-                oldonload(); 
-                func();
-            };
-        }
-    }
-    // onLoad function that move objects in the DOM and make them visible 
-    function OAS_AMJX_init() {
-        var apos = OAS_listpos.split(','); 
-        var olddocwrite = document.write; 
-        for (var i = 0; i < apos.length; i++) {
-            if (apos[i] == "") continue;
-
-            var object_togo = new getObj('OAS_' + apos[i]); 
-            var object_tomove = new getObj('Hidden_OAS_' + apos[i]); 
-            html = ""; 
-            if (typeof (object_togo.obj) != 'undefined' && object_togo.obj && typeof (object_tomove.obj) != 'undefined') {
-                object_togo.obj.appendChild(object_tomove.obj);
-                object_tomove.style.display = 'inline';
-            }
-        }
-    }
-    // write the MJX call
-    document.write('<script type="text/javascript" src="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"></scr' + 'ipt>');
-    // Check for DOM Support 
-    if (document.getElementById && document.createTextNode) addLoad(OAS_AMJX_init);
-    // Function to deliver if OAS is unreachable 
-    function OAS_NORMAL(pos) {
-        document.write('<a href="' + OAS_url + 'click_nx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" target=' + OAS_target + '>');
-        document.write('<img alt="OAS AD" src="' + OAS_url + 'adstream_nx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '!' + pos + '?' + OAS_query + '" border="0" /></a>');
-    }
-    // Function to Select Ad Function 
-    function OAS_AD(pos) {
-        typeof OAS_RICH != 'undefined' ? OAS_RICH(pos) : OAS_NORMAL(pos);
-    }
-</script><script type="text/javascript" src="http://oascentral.familylink.com/RealMedia/ads/adstream_mjx.ads/www.familylink.com/1422593175@Top?"></script> 
-<!-- OAS MJX Footer Config Ends -->
-<!-- OAS MJX Footer Ad Calls Begin --> 
-<div id="Hidden_OAS_Top" style="display: none;float:left;margin-left:100px">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Top'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Top?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Top?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_Right" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Right'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Right?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Right?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_Right1" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Right1'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Right1?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Right1?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_Right2" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Right2'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Right2?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Right2?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_Right3" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Right3'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Right3?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Right3?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_x01" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('x01'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!x01?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!x01?" border="0"></a> 
-</div>
-<div id="Hidden_OAS_Bottom" style="display: none;">
-    <script language="javascript" type="text/javascript"> 
-        <!--
-        OAS_AD('Bottom'); 
-        //-->
-    </script><a href="http://oascentral.familylink.com/RealMedia/ads/click_nx.ads/www.familylink.com/1422593175@Top!Bottom?" target="_blank"><img alt="OAS AD" src="http://oascentral.familylink.com/RealMedia/ads/adstream_nx.ads/www.familylink.com/1422593175@Top!Bottom?" border="0"></a> 
-</div>
+</div><!-- 1. jQuery and our JS first -->
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.min.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery-ui.min.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.ui.overrides.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.FLloading.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.form.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.confirm.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.autocomplete.min.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/common.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/search.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/lib/ajaxUpload.js?20100806.929f820"></script>
+<script type="text/javascript" src="http://s.flcdn.net/js/ancestor_search_results.js?20100806.929f820"></script>
 
 
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.min.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery-ui.min.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.ui.overrides.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.FLloading.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.form.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/jquery/jquery.confirm.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/common.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/search.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/lib/ajaxUpload.js?201006141743"></script>
-<script type="text/javascript" src="http://s.flcdn.net/js/ancestor_search_results.js?201006141743"></script>
+    <!--[if lt IE 7]>
+    <script defer="defer" type="text/javascript" src="http://s.flcdn.net/js/lib/pngfix.js"></script>
+    <![endif]-->
+
+
+<!-- 2. Ads -->
 
 
 
 
 
+
+<!-- 3. Analytics -->
 <!-- Google Analytics Tracking code -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-2772564-19");
-pageTracker._trackPageview('privacypolicy');
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+    <script type="text/javascript">
+    try {
+    var pageTracker = _gat._getTracker("UA-2772564-19");
+    pageTracker._trackPageview('privacypolicy');
+    pageTracker._trackEvent('bundle', '20100806.929f820');
+    
+    } catch(err) {}
+    </script>
 
-} catch(err) {}
-</script>
+    <!-- Start Quantcast tag -->
+    <script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+    <script type="text/javascript">_qacct="p-86YkM5oSeBMSE";quantserve();</script>
+    <noscript>
+    <a href="http://www.quantcast.com/p-86YkM5oSeBMSE" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-86YkM5oSeBMSE.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
+    </noscript>
+    <!-- End Quantcast tag -->
 
-<!-- OpenX tag -->
-
-<!-- Start Quantcast tag -->
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
-<script type="text/javascript">_qacct="p-86YkM5oSeBMSE";quantserve();</script>
-<noscript>
-<a href="http://www.quantcast.com/p-86YkM5oSeBMSE" target="_blank"><img src="http://pixel.quantserve.com/pixel/p-86YkM5oSeBMSE.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/></a>
-</noscript>
-<!-- End Quantcast tag -->
 
 
 
 <script type="text/javascript" src="http://tags.crwdcntrl.net/c/239/cc.js"></script>
-<script type="text/javascript">
-    LOTCC.bcp();
-</script>
+    <script type="text/javascript">
+        LOTCC.bcp();
+    </script>
+
+
+<!-- 4. Facebook -->
+
+
+<!-- 5. Popup -->
+
 
 
 </body></html>
