--- a/c/co/con/concur.com.html
+++ b/c/co/con/concur.com.html
@@ -1,55 +1,43 @@
-<!--The following is the downloaded HTML source of the concur.com privacy policy that was archived on 2009-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091231203108id_/http%3A//concur.com/about/corporate/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the concur.com privacy policy that was archived on 2010-08-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100808133205id_/http%3A//www.concur.com/about/corporate/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Concur Technologies, Inc. Privacy Policy | Concur.com</title>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/themes/concur/favicon.ico" type="image/x-icon">
-<link rel="schema.dc" href="http://purl.org/dc/elements/1.1/">
-<link rel="canonical" href="http://concur.com/about/corporate/privacy.html">
-<meta name="description" content="NOTICE OF CHANGES to Concur.com visitors: Concur has made changes to its privacy policy in an effort to better describe how it collects, uses, and shares its information.  Please contact us by emailing by emailing concurnews@concur.com with any questions or concerns about these changes.
- 
-Last Updated: November 1, 2009
 
-This Policy explains how">
-<meta name="dc.creator" content="erik.hedin">
-<meta name="dc.description" content="NOTICE OF CHANGES to Concur.com visitors: Concur has made changes to its privacy policy in an effort to better describe how it collects, uses, and shares its information.  Please contact us by emailing by emailing concurnews@concur.com with any questions or concerns about these changes.
- 
-Last Updated: November 1, 2009
 
-This Policy explains how">
-<meta name="dc.title" content="Concur Technologies, Inc. Privacy Policy">
-<meta name="revisit-after" content="1 day">
-
- <link rel="stylesheet" href="/themes/concur/css/screen-08-09.css?ver=120309" type="text/css" media="screen">
+ <link rel="stylesheet" href="/themes/concur/css/screen-08-09.css?ver=051910" type="text/css" media="screen">
 <link rel="stylesheet" href="/themes/concur/css/print.css" type="text/css" media="print">
 <link rel="stylesheet" href="/themes/concur/css/sIFR-screen.css" type="text/css" media="screen">
 <link rel="stylesheet" href="/themes/concur/css/sIFR-print.css" type="text/css" media="print">
-<link rel="stylesheet" href="/themes/concur/css/lightbox_0808.css?ver=110909" type="text/css" media="screen">
+<link rel="stylesheet" href="/themes/concur/css/lightbox_0808.css?ver=042610" type="text/css" media="screen">
 
-<link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/date/date.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/calendar/calendar.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/misc/farbtastic/farbtastic.css?B">
-<link type="text/css" rel="stylesheet" media="all" href="/themes/concur/style.css?B">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/date/date.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/fckeditor/fckeditor.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/calendar/calendar.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/misc/farbtastic/farbtastic.css?l">
+<link type="text/css" rel="stylesheet" media="all" href="/themes/concur/style.css?l">
       <script src="/misc/jquery.js" type="text/javascript"></script>
       <script type="text/javascript"> </script>
-   <script src="/javascript/greybox_010809.js?ver=110909" type="text/javascript"></script>
+   <script src="/javascript/greybox_010809.js?ver=051810" type="text/javascript"></script>
 <script src="/javascript/swfobject.js" type="text/javascript"></script>
 <script src="/javascript/global-map-10-08.js" type="text/javascript"></script>
 <script src="/javascript/sifr.js" type="text/javascript"></script>
-<script src="/javascript/paidSearchCookie.js" type="text/javascript"></script>
-
-<!-- pid =  //-->
-<!--[if lt IE 7]>
+<script type="text/javascript">
+$(document).ready(function(){ $("#search #edit-submit").attr("value", "_");});
+</script>
+<script src="/javascript/jquery_cookie.js" type="text/javascript" charset="utf-8"></script>
+<script src="/javascript/jQuery_query_string_plugin.js" type="text/javascript" charset="utf-8"></script><!--[if lt IE 7]>
 <style type="text/css">
 body #overlay {
 background-image: none;
@@ -61,7 +49,7 @@ filter: alpha(opacity=80);
 </style>
 <![endif]-->
 </head>
-<body class="not-front not-logged-in page-node node-type-page two-sidebars">
+<body class="not-front not-logged-in page-node node-type-page two-sidebars concur-us">
 <div id="fullC">
 	<div id="frame">
   		<div id="middleC" class="page">
@@ -69,9 +57,9 @@ filter: alpha(opacity=80);
 			<div class="tabs"></div>
 			
 	 	<div class="breadcrumb"><a href="/">Home</a> » <a href="/node">Content</a></div><h1 class="title">Concur Technologies, Inc. Privacy Policy</h1>												        		        		        		
- <div class="node  ">
+ <div class="node  no-picture  node-page   ">
 			
-    <div id="popUP"> 	
+    	<div id="popUP">	
 
 	    <div class="content"><p><b>NOTICE OF CHANGES to Concur.com visitors: Concur has made changes to its privacy policy in an effort to better describe how it collects, uses, and shares its information.  Please contact us by emailing by emailing <a href="mailto:concurnews@concur.com">concurnews@concur.com</a> with any questions or concerns about these changes.</b></p>
 <p>Last Updated: November 1, 2009</p>
@@ -120,7 +108,8 @@ filter: alpha(opacity=80);
           USA<br>
           Attention: <a href="mailto:concurnews@concur.com">concurnews@concur.com</a></p>
 </div>
-</div>
+
+	</div>
       </div>
 	        					
 												
@@ -129,7 +118,7 @@ filter: alpha(opacity=80);
     <div> <script src="/javascript/a-sliding-jQmenu.js?ver=022109" type="text/javascript"></script>
     <div id="aboutMenu">
 <div id="careers-knob" class="drawer-tab"><span id="careers-tab"><a href="/about/careers/">Careers</a></span>
-<ul class="drawer" id="careers-drawer" style="display: none">	
+<ul class="drawer" id="careers-drawer" style="display: none;">	
 <li><a href="/about/careers/openings.html">View Current Openings</a></li>
 <li style="margin-left:10px;"><a href="/about/careers/equal.html">Equal Opportunity Employer</a></li>
 <li><a href="/about/careers/working.html">Working At Concur</a></li>
@@ -145,7 +134,7 @@ filter: alpha(opacity=80);
 
 
 <div id="events-knob" class="drawer-tab"><span id="events-tab"><a href="/about/news-events/events/index.html">Events</a></span>
-<ul id="events-drawer" class="drawer" style="display: none">
+<ul id="events-drawer" class="drawer" style="display: none;">
 <li><a href="/about/news-events/events/live/index.html">Live Events</a></li>
 <li><a href="/about/news-events/events/web/index.html">Web Events</a></li>
 <li><a href="/fusion/2010/index.html">Client Conference</a></li>
@@ -155,7 +144,7 @@ filter: alpha(opacity=80);
 </div>
 
 <div id="news-knob" class="drawer-tab"><span id="news-tab"><a href="/about/news-events/newsroom.html">Newsroom</a></span>
-<ul id="news-drawer" class="drawer" style="display: none">
+<ul id="news-drawer" class="drawer" style="display: none;">
 <li><a href="/about/news-events/blog/index.html">Blog</a></li>
 <li><a href="/about/news-events/multimedia/index.html">Multimedia</a></li>
 <li><a href="/about/news-events/news/index.html">News</a></li>
@@ -165,11 +154,11 @@ filter: alpha(opacity=80);
 </div>
 
 <div id="investors-knob" class="drawer-tab"><span id="investors-tab"><a href="/about/investors/">Investors</a></span>
-<ul id="investors-drawer" class="drawer" style="display: none">
+<ul id="investors-drawer" class="drawer" style="display: none;">
 <li><a href="/about/investors/stock.html">Stock Information</a></li>
 <li><a href="/about/investors/filings.html">SEC Filings</a></li>
+<li><a href="/2009AnnualReport/index.html">Annual Report (2009)</a></li>
 <li><a href="/2008AnnualReport/index.html">Annual Report (2008)</a></li>
-<li><a href="/2007AnnualReport/index.html">Annual Report (2007)</a></li>
 <li><a href="/about/investors/calendar.html">Calendar of Events</a></li>
 <li><a href="/about/investors/audio.html">Audio Archives</a></li>
 <li><a href="/about/investors/faq.html">Investor FAQ</a></li>
@@ -180,7 +169,7 @@ filter: alpha(opacity=80);
 <div class="drawer-bottom-rule"></div>
 </div>
 <div id="corporate-knob" class="drawer-tab"><span id="corporate-tab"><a href="/about/corporate/">Corporate Info</a></span>
-<ul id="corporate-drawer" class="drawer" style="display: none">
+<ul id="corporate-drawer" class="drawer" style="display: none;">
 <li><a href="/about/corporate/recognition.html">Industry Recognition</a></li>
 <li><a href="/about/corporate/conduct.html">Business Conduct &amp; Ethics</a></li>
 <li><a href="/about/corporate/executive.html">Executive Officers</a></li>
@@ -192,7 +181,7 @@ filter: alpha(opacity=80);
 <div class="drawer-bottom-rule"></div>
 </div>
 <div id="partners-knob" class="drawer-tab"><span id="partners-tab"><a href="/about/partners/">Partners</a></span>
-<ul id="partners-drawer" class="drawer" style="display: none">
+<ul id="partners-drawer" class="drawer" style="display: none;">
 <li><a href="/about/partners/marketing-alliance/">Marketing Alliance Partners</a></li>
 <li><a href="/about/partners/technology/">Technology Partners</a></li>
 <li><a href="/about/partners/travel/">Travel Partners</a></li>
@@ -202,19 +191,31 @@ filter: alpha(opacity=80);
 </div>
 <div id="concur-cares-knob" class="drawer-tab"><span id="concur-cares-tab"><a href="/about/concurcares/">Concur Cares</a></span>
 <ul id="concur-cares-drawer" class="drawer" style="display: none">
-<li><a href="/about/concurcares/conservation-international.html">Conservation International</a></li>
 <li><a href="/about/concurcares/community.html">Concur in the Community</a></li>
 </ul><a href="javascript: void(0);" id="concur-cares" class="open-drawer"></a>
 <div class="drawer-bottom-rule"></div>
 </div>
 <div id="contact-knob" class="drawer-tab"><span id="contact-tab"><a href="/about/contact/">Contact Us</a></span>
-<ul id="contact-drawer" class="drawer" style="display: none">
+<ul id="contact-drawer" class="drawer" style="display: none;">
 <li><a href="/about/contact/offices.html">Offices</a></li>
 <li><a href="/about/contact/accommodations.html">Accommodations</a></li>
 <li><a href="/about/contact/directions-redmond.html">Redmond Directions</a></li>
 </ul><a href="javascript: void(0);" id="contact" class="open-drawer"></a>
 <div class="drawer-bottom-rule"></div>
 </div>
+
+<div id="client-res-knob" class="drawer-tab">
+<span id="client-res-tab"><a href="/about/client-resources">Client Resources</a></span>
+<ul id="client-res-drawer" class="drawer" style="display: none;">
+<li><a href="https://community.concur.com/web/guest/home" target="_blank">Concur Client Central</a></li>
+<li><a href="https://community.concur.com/web/ConnectionsClient/Forum" target="_blank">Client Forum</a></li>
+<li><a href="/login">Solution Login</a></li>
+<li><a href="/about/news-events/blog/index.html">Insights @ Concur Blog</a></li>
+</ul>
+<a href="javascript: void(0);" id="client-res" class="open-drawer"></a>
+<div class="drawer-bottom-rule"></div>
+</div>
+
 </div></div>
  </div>
 </div>				
@@ -240,22 +241,15 @@ filter: alpha(opacity=80);
     <div><ul id="topNav">
       <li><a href="/login">Login</a></li>
       <li> | </li>
-      <li><a href="/about/contact/offices.html" id="phone">1 800 401 8412</a></li>
+      <li id="phone-pid">
+<a href="/about/contact/offices.html">1 800 401 8412</a>
+</li>
       <li> | </li>
       <li><a href="/about/contact/">Contact Us</a></li>
 		<li> | </li>
       <li><a href="/partials/global-sites-10-08.html" rel="lightbox open">International Sites</a></li>
     </ul>
-<script type="text/javascript">
-//GregC 8-27-09 Added this code to swap phone number for PPC visitors.
-var phone='1 800 401 8412';
-var search=getCookie('paidSearch');
-if (search!=null && search!="")
-{
- phone = '1 800 401 9214';
-}
-document.getElementById('phone').innerHTML=phone;
-</script></div>
+</div>
  </div>
     <!-- end topNav -->
     <div id="header">
@@ -265,36 +259,52 @@ document.getElementById('phone').innerHTML=phone;
 <li id="proNav"><a href="/products/">Products</a></li>
 <li id="choNav"><a href="/choose/">Why Choose Concur?</a></li>
 <li id="aboNav"><a href="/about/" class="current">About Us</a></li>
-<li id="comNav"><a href="http://www.concur.com/about/news-events/blog/index.html">Blog</a></li>
+<li id="comNav"><a href="/about/news-events/blog/index.html">Blog</a></li>
 <li id="supNav"><a href="https://community.concur.com/web/ServiceCentral/Welcome">Support</a></li>
 </ul>
 </div>
  </div>
 	  	<div id="search"><form action="/about/corporate/privacy.html" accept-charset="UTF-8" method="post" id="search-theme-form">
-<div> <input type="text" maxlength="128" name="search_theme_form_keys" id="edit-search-theme-form-keys" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
-<input type="submit" name="op" id="edit-submit" value="" class="form-submit">
+<div>  <div class="form-item" id="edit-search-theme-form-1-wrapper">
+ <label for="edit-search-theme-form-1">Search this site: </label>
+ <input type="text" maxlength="128" name="search_theme_form" id="edit-search-theme-form-1" size="15" value="" title="Enter the terms you wish to search for." class="form-text">
+</div>
+<input type="submit" name="op" id="edit-submit" value="_" class="form-submit">
+<input type="hidden" name="form_build_id" id="form-1a6ffe2b675569dbd077438a1b0ed037" value="form-1a6ffe2b675569dbd077438a1b0ed037">
 <input type="hidden" name="form_id" id="edit-search-theme-form" value="search_theme_form">
-<input type="hidden" name="form_token" id="a-unique-id" value="18efc08d32f1ba8cd856b78783ebb8d5">
+
 </div></form>
 </div>    </div><!-- end header -->
 </div><!-- end topLinks -->
 <div id="footer">
   <div class="block block-block" id="block-block-35">
-    <div>   <p>© Copyright 2009 Concur Technologies, Inc. All rights reserved. <a href="/about/careers/">Careers</a> | <a href="/about/investors/">Investors</a> | <a href="/about/corporate/privacy.html">NEW Privacy Policy</a> | <a href="/sitemap">Site Map</a></p> </div>
+    <div>   <p>© Copyright 2010 Concur Technologies, Inc. All rights reserved. <a href="/about/careers/">Careers</a> | <a href="https://community.concur.com/web/ConnectionsClient/Forum">Client Forum</a> | <a href="/about/investors/">Investors</a> | <a href="/about/corporate/privacy.html">NEW Privacy Policy</a> | <a href="/sitemap">Site Map</a></p> </div>
  </div>
-Array
-(
-    [0] =&gt; node
-    [1] =&gt; 24
-)
-Array
-(
-    [0] =&gt; 
-    [1] =&gt; about
-    [2] =&gt; corporate
-    [3] =&gt; privacy.html
-)
-
+  <div class="block block-block" id="block-block-76">
+    <div><p><!-- Begin Optify Tracking Code. Please place immediately before closing BODY tag --></p>
+<script type="text/javascript">
+var optJsHost = (("https:" == document.location.protocol) ? "https://" : "http://");
+document.write(unescape("%3Cscript src='" + optJsHost + "service.optify.net/opt.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://service.optify.net/opt.js" type="text/javascript"></script><script type="text/javascript"> try { _opt.view("B0SEYYFY"); } catch(err) {} </script><p><!-- End Optify Tracking Code. Please place immediately before closing BODY tag --></p>
+</div>
+ </div>
+  <div class="block block-block" id="block-block-83">
+    <div><script type="text/javascript">
+$(document).ready(function(){
+	var pidString = $.query.get('pid');
+	var pidPhone = '1 800 401 9214';
+	if($.cookie('paidSearch') == 'true'){
+			$("#phone-pid").empty().append("<a href='/about/contact/offices.html'>" + pidPhone + "</a>");
+	}
+	if (pidString == "PPC"){
+				var COOKIE_NAME = 'paidSearch';
+                var options = { path: '/', expires: 1 };
+                 $.cookie(COOKIE_NAME, 'true', options);
+				$("#phone-pid").empty().append("<a href='/about/contact/offices.html'>" + pidPhone + "</a>");
+				}		
+});
+</script></div>
+ </div>
    </div>
 
 </div><!-- end fullC -->
@@ -395,7 +405,7 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
 height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.13. -->
 <script type="text/javascript" src="/elqNow/elqCfg.js" language="JavaScript"></script>
-<script type="text/javascript" src="/elqNow/elqImg.js" language="JavaScript"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=3091&amp;ref2=elqNone&amp;tzo=0&amp;ms=803" border="0" width="1" height="1"></layer>
+<script type="text/javascript" src="/elqNow/elqImg.js" language="JavaScript"></script><layer hidden="true"><img src="https://secure.eloqua.com/visitor/v200/svrGP.aspx?pps=3&amp;siteid=3091&amp;ref2=elqNone&amp;tzo=0&amp;ms=991" border="0" width="1" height="1"></layer>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
